--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,6 @@
 @import 'icons.css'
 @import 'color_palette'
+@import 'compass'
 
 body
     font-family: Roboto, sans-serif
@@ -36,19 +37,88 @@ body
                 weight: lighter
                 size: 1.6rem
 
-        // .count-cell
-        //     .mui-text-field
-        //         height: 5.6rem
-        //         input
-        //             padding:
-        //                 left: 0
-        //                 bottom: 1rem
-        //             color: $yellow-50
-        //             &:focus
-        //                 border: 0
-        //         label
-        //             top: 1.2rem
-        //             color: $yellow-50
-        //             font-weight: normal
-        //         &-focus-underline
-        //             border-bottom-color: $yellow-50
+#candidate-list
+    padding: 2rem 1rem
+    .candidate-card
+        border: 1px solid $indigo-50
+        +box-shadow($indigo-50 3px 3px 3px)
+        cursor: pointer
+        padding: 1rem 0
+        .candidate-
+            &picture
+                background:
+                    repeat: no-repeat
+                    position: center center
+                width: 15rem
+                height: 15rem
+                +border-radius(50%)
+                margin: 0 auto
+            &name
+                border-bottom: 1px solid $indigo-50
+                padding: .5rem
+                text-align: center
+                font-weight: bold
+                background: rgba(255, 255, 255, .8)
+                margin-top: -3rem
+            &general
+                padding: .5rem 0
+                p
+                    text-align: center
+                    margin: 0
+                    padding: 0
+                    &.university
+                        color: $grey-500
+                        font-size: 1.4rem
+                    &.male
+                        color: $blue-700
+                    &.female
+                        color: $red-500
+            &skills
+                padding: .5rem 0
+                p
+                    width: 50%
+                    float: left
+                    padding: 0 1rem
+                    margin: 0
+                    color: $red-500
+                    span
+                        display: inline-block
+                        &:first-child
+                            font-weight: bold
+                            min-width: 65%
+                            max-width: 65%
+                        &:last-child
+                            min-width: 35%
+                            max-width: 35%
+            &tags
+                padding: 1rem .5rem
+                min-height: 5.6rem
+                max-height: 5.6rem
+                overflow: hidden
+                span
+                    display: inline-block
+                    padding: 0 .5rem
+                    margin: .2rem
+                    background: $grey-300
+                    font-size: 1.2rem
+            &extra
+                text-align: center
+                margin: 1rem 0 0
+                span
+                    font-size: 1.2rem
+                    margin: 0 .3rem
+                    display: inline-block
+
+#full-width-dialog
+    .dialog-title
+        background: $red-600
+        font-size: 1.6rem
+        color: #FFF
+        padding: .6rem
+        font-weight: bold
+        line-height: normal
+        >span
+            line-height: 2.2rem
+            cursor: pointer
+    .dialog-content
+        padding: 1rem
