--- a/src/less/main.less
+++ b/src/less/main.less
@@ -2,6 +2,6 @@
 
 //Define a custom less file to override
 //any variables defined in scaffolding.less
-//@import "my-custom-overrides.less";
+@import "awesome_variables.less";
 
 @import "node_modules/material-ui/src/less/components.less";
