--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -47,6 +47,69 @@ div.section-title
             font:
                 weight: lighter
                 size: 1.6rem
+    .candidate-submenu
+        border: 1px solid $indigo-50
+        +box-shadow($indigo-50 3px 3px 3px)
+        padding: 5px
+        z-index: 10
+        background: $grey-50
+        position: absolute
+        right: 0
+        min-height: 100%
+        max-height: 100%
+        overflow: auto
+        .mui-
+            &tab-item-container
+                background: #FFF
+                height: 2.4rem
+                .mui-tab-item
+                    line-height: 2.4rem
+                    color: $grey-900
+                    width: 50% !important
+                    border-bottom: 1px solid $red-100
+            &tab-template
+                padding: 1rem 0 0
+            &ink-bar
+                background: $red-500
+                width: 10.4rem
+                width: 50%
+                &:not(.mui-tab-item:first-child)
+                    left: 50% !important
+                    height: 4px
+        .candidate-card
+            margin: 1rem 0
+            .picture
+                width: 6rem
+                height: 6rem
+                background:
+                    size: 100%
+                    position: center
+                    repeat: no-repeat
+                +border-radius(50%)
+                margin: 0 auto
+            p
+                text-overflow: ellipsis
+                white-space: nowrap
+                overflow: hidden
+                margin: 0
+                padding: 0
+                &.name
+                    font-weight: bold
+                &.academic
+                    color: $red-500
+                &.tags
+                    color: $grey-500
+                    font-size: 1rem
+            .score-bubble
+                float: left
+                padding: 0 3px
+                background: $red-500
+                color: $grey-50
+                +border-radius(4px)
+                font:
+                    weight: bold
+                    size: 1.2rem
+
 
 #candidate-list,
 #full-width-dialog
@@ -59,6 +122,7 @@ div.section-title
         +box-shadow($indigo-50 3px 3px 3px)
         cursor: pointer
         padding: 1rem 0
+        position: relative
         .candidate-
             &picture
                 background:
@@ -128,13 +192,49 @@ div.section-title
                     font-size: 1.2rem
                     margin: 0 .3rem
                     display: inline-block
-            &score
-                position: relative
-                top: 0
+            &score,
             &bookmark-star
-                position: relative
-                background: url(../imgs/bookmarked.png) no-repeat center center
-                bottom: -110px
+                background-size: 100% !important
+                width: 6rem
+                text-align: center
+                position: absolute
+                float: left
+                font:
+                    weight: bold
+                color: $grey-50
+                // left: -3.6rem
+                top: 0
+                left: 0
+            &score
+                background: url(../imgs/badge.png) no-repeat top left
+                padding: 1.4rem 0 2.2rem 0
+            &bookmark-star
+                background: url(../imgs/bookmarked.png) no-repeat top left
+                top: 7.6rem
+                padding: 1.8rem
+            &bookmark-icon
+                color: #F00
+                position: absolute
+                right: 0
+                top: 0
+                border:
+                    style: solid
+                    width: 0 4rem 4rem 0
+                    color: transparent $red-600 transparent
+        .un-bookmarked
+            border:
+                style: solid
+                width: 0 4rem 4rem 0
+                color: transparent $grey-200 transparent
+        .high-top
+            top: 11.6rem
+        .icon-star-full
+            position: absolute
+            right: -3.8rem
+            top: 4px
+            color: $grey-50
+            font-size: 1.4rem
+    
 
 
 #full-width-dialog
