Bind all events

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -54,7 +54,7 @@ div.section-title
         z-index: 10
         background: $grey-50
         position: absolute
-        right: 0
+        right: -100%
         min-height: 100%
         max-height: 100%
         overflow: auto
@@ -202,7 +202,6 @@ div.section-title
                 font:
                     weight: bold
                 color: $grey-50
-                // left: -3.6rem
                 top: 0
                 left: 0
             &score
@@ -238,6 +237,12 @@ div.section-title
 
 
 #full-width-dialog
+    position: fixed
+    background: $grey-50
+    top: 12.4rem
+    z-index: 10000
+    padding: 0
+    visibility: hidden
     .dialog-title
         background: $red-600
         font-size: 1.6rem
@@ -343,3 +348,32 @@ div.section-title
             .icon-calendar
                 font-size: 1.2rem
                 color: $grey-900
+
+.fadeInDown
+    +animation(fadeInDown 1s ease 0s both)
+    visibility: visible !important
+
+.fadeOutUp
+    +animation(fadeOutUp 1s ease 0s both)
+    visibility: visible !important
+.showSubMenu
+    +transition(.5s)
+    right: 0% !important
+.hideSubMenu
+    +transition(.5s)
+    right: -100%
+
++keyframes(fadeInDown)
+    0%
+        +opacity(0)
+        +transform(translateY(-2rem))
+    100%
+        +opacity(1)
+        +transform(translateY(.2rem))
++keyframes(fadeOutUp)
+    0%
+        +opacity(1)
+        +transform(translateY(.2rem))
+    100%
+        +opacity(0)
+        +transform(translateY(-2rem))
