--- a/src/less/main.less
+++ b/src/less/main.less
@@ -5,3 +5,4 @@
 @import "awesome_variables.less";
 
 @import "node_modules/material-ui/src/less/components.less";
+@import "node_modules/react-select/less/default.less";
